[package]
name = "muicss-yew"
version = "0.1.0"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
yew = "0.17"
yewtil = "0.3"

[workspace]
members = ["examples/*"]
