[package]
name = "gh-pages"
version = "0.1.0"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
muicss-yew = { path = "../" }
wasm-logger = "0.2"
yew = "0.17"
yew-feather = "0.1"
yew-router = "0.14"
yew_prism = "0.4"
yewtil = "0.3"
