[package]
name = "caret"
version = "0.1.0"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muicss-yew = { path = "../.." }
yew = { version = "0.13.0", features = ["std_web"] }
