[package]
name = "gh-pages"
version = "0.1.0"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muicss-yew = { path = "../.." }
yew = "0.17"
yew-feather = "0.1"
yew_prism = "0.4"
yewtil = "0.3"
